open api settings for clean room_reservation
